--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Display ref name
+        run: echo "The ref name is ${{ github.ref_name }}"
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
