--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,122 @@
-name: Build Release
+name: Build and Export GameMaker Project
 
 on:
   push:
-    # Sequence of patterns matched against refs/tags
     branches:
-    - main
-    paths-ignore:
-      - '.github/workflows/main.yml'
-      
-permissions:
-  contents: write  # Ensure the action has write access to contents
+      - main
+    # paths-ignore:
+      # - '.github/workflows/**'
 
 jobs:
-  build:
-    name: Create Release
+  get_version:
+    name: Get Latest Version Tag
     runs-on: ubuntu-latest
+    outputs:
+      new_tag: ${{ steps.new_tag.outputs.tag }}
+    
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
+
       - name: Get latest tag
         id: get_latest_tag
         run: |
-          latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
-          echo "::set-output name=tag::$latest_tag"
-      - name: Increment tag
-        id: increment_tag
+          latest_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
+          echo "Latest tag: $latest_tag"
+          echo "::set-output name=latest_tag::$latest_tag"
+
+      - name: Bump version
+        id: new_tag
         run: |
-          latest_tag="${{ steps.get_latest_tag.outputs.tag }}"
-          major_version=$(echo "$latest_tag" | cut -d. -f1 | sed 's/v//')
-          next_major_version=$((major_version + 1))
-          new_tag="v$next_major_version.0.0"
-          echo "::set-output name=next_tag::$new_tag"
-      - name: Create Release
+          if [ -z "${{ steps.get_latest_tag.outputs.latest_tag }}" ]; then
+            new_tag="v1.0.0"
+          else
+            latest_tag=${{ steps.get_latest_tag.outputs.latest_tag }}
+            IFS='.' read -r -a parts <<< "${latest_tag#v}"
+            major=${parts[0]}
+            minor=${parts[1]}
+            patch=${parts[2]}
+            new_tag="v$major.$((minor + 1)).0"
+          fi
+          echo "New tag: $new_tag"
+          echo "::set-output name=tag::$new_tag"
+
+  build-and-export-for-Windows:
+    name: Build and Export for Windows
+    needs: get_version
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up GameMaker CLI
+        run: |
+          Invoke-WebRequest -Uri "https://accounts.yoyogames.com/downloads/cli/ReleaseNotes" -OutFile "gmcli.zip"
+          Expand-Archive -Path "gmcli.zip" -DestinationPath "gmcli"
+          chmod +x gmcli/gm
+
+      - name: Build and Export GameMaker Project to Windows
+        run: |
+          gmcli/gm build --project BugBytes/BugBytes/BugBytes.yyp --output exports/windows --target=Windows --runtime=2.3.1.409
+
+      - name: Compress Windows .exe
+        run: |
+          Compress-Archive -Path exports/windows/* -DestinationPath exports/windows/my_game.zip
+
+      - name: Upload Windows .zip to GitHub Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ needs.get_version.outputs.new_tag }}
+          asset_path: exports/windows/BugBytes_Windows.zip
+          asset_name: BugBytes_Windows.zip
+          asset_content_type: application/zip
+
+  build-and-export-for-Mac:
+    name: Build and Export for Mac
+    needs: get_version
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up GameMaker CLI
+        run: |
+          curl -L -o gmcli.zip "https://accounts.yoyogames.com/downloads/cli/ReleaseNotes"
+          unzip gmcli.zip -d gmcli
+          chmod +x gmcli/gm
+
+      - name: Build and Export GameMaker Project to Mac
+        run: |
+          gmcli/gm build --project BugBytes/BugBytes/BugBytes.yyp --output exports/mac --target=Mac --runtime=2.3.1.409
+
+      - name: Compress Mac .app
+        run: zip -r exports/mac/my_game.zip exports/mac/*
+
+      - name: Upload Mac .zip to GitHub Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ needs.get_version.outputs.new_tag }}
+          asset_path: exports/mac/BugBytes_Mac.zip
+          asset_name: BugBytes_Mac.zip
+          asset_content_type: application/zip
+
+  create_release:
+    name: Create GitHub Release
+    needs: [build-and-export-for-Windows, build-and-export-for-Mac]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.increment_tag.outputs.next_tag }}
-          release_name: Release ${{ steps.increment_tag.outputs.next_tag }}
+          tag_name: ${{ needs.get_version.outputs.new_tag }}
+          release_name: Release ${{ needs.get_version.outputs.new_tag }}
           body: |
-            Example release notes 
+            Automated release notes. Add details about changes, fixes, etc.
+          draft: false
+          prerelease: false
