--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ on:
     # paths-ignore:
       # - '.github/workflows/**' 
 
+permissions: write
+
 jobs:
   get_version:
     name: Get Latest Version Tag
