--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,19 +24,27 @@ jobs:
       - name: Find Latest Tag
         id: find_tag
         run: |
-          latest_tag=$(git describe --tags --abbrev=0)
+          latest_tag=$(git describe --tags --abbrev=0 --always)
           echo "::set-output name=latest_tag::$latest_tag"
 
-      - name: Use Latest Tag
-        run: echo "Latest tag is ${{ steps.find_tag.outputs.latest_tag }}"
-      
+      - name: Increment Tag
+        id: increment_tag
+        run: |
+          latest_tag=$(echo "${{ steps.find_tag.outputs.latest_tag }}")
+          major=$(echo $latest_tag | cut -d'.' -f1)
+          minor=$(echo $latest_tag | cut -d'.' -f2)
+          patch=$(echo $latest_tag | cut -d'.' -f3)
+          new_tag="$major.$minor.$((patch + 1))"
+          echo "::set-output name=new_tag::$new_tag"
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
+        with:
+          tag_name: ${{ steps.increment_tag.outputs.new_tag }}
+          release_name: Release ${{ steps.increment_tag.outputs.new_tag }}
+          body: Automated release notes. Add details about changes, fixes, etc.
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.increment_tag.outputs.next_tag }}
-          release_name: Release ${{ steps.increment_tag.outputs.next_tag }}
-          body: |
-            Example release notes 
