--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ steps.semvers.v_major }} 
+          tag_name: aa ${{ steps.semvers.v_major }} 
           release_name: Release ${{ steps.semvers.v_major }}
           body: Automated release notes. Add details about changes, fixes, etc.
           draft: false
