--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  contents: write
+  
 jobs:
   automate_versioning_and_release:
     runs-on: ubuntu-latest
@@ -30,8 +33,8 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: aa ${{ steps.semvers.v_major }} 
-          release_name: Release ${{ steps.semvers.v_major }}
+          tag_name: ${{ steps.semvers.outputs.v_major }} 
+          release_name: Release ${{ steps.semvers.outputs.v_major }}
           body: Automated release notes. Add details about changes, fixes, etc.
           draft: false
           prerelease: false
