--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
+      - name: Checkout code
+        uses: actions/checkout@v4
+    
       - name: Set up Git
         run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       
